--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "axios": "^0.19.2",
     "gsap": "^3.3.1",
     "node-sass": "^4.14.1",
@@ -14,7 +18,8 @@
     "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,6 +44,8 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^3.3.0",
+    "@types/enzyme": "^3.10.8",
+    "@types/react-scroll": "^1.8.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "jest-enzyme": "^7.1.2"
