--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
+    "emailjs-com": "^2.6.4",
     "gsap": "^3.3.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
